Fix the spacing and button in get-started

--- a/css/outer/homeb.less
+++ b/css/outer/homeb.less
@@ -149,6 +149,13 @@ body#home-page {
         border-top: 1px solid #ccc;
       }
 
+      // needs a high specificity to override defaults
+      .main-cta .ctabox a.btn-jumbo {
+        margin: -10p 0 20px 0;
+        padding: 12px 24px 12px 24px;
+        font-size: 22px;
+      }
+
       background: #ffffff;
       .border-radius(10px);
       padding: 20px 20px 40px 20px;
